--- a/editor-rtl.html
+++ b/editor-rtl.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/codemirror.css">
+	<link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
+		type="text/css">
 	<style>
 		*,
 		*:after,
@@ -11,6 +13,11 @@
 			margin: 0;
 			padding: 0;
 			box-sizing: border-box;
+		}
+
+		#editor * {
+			font-family: Vazirmatn, Tahoma, Arial, monospace;
+			font-size: 16px;
 		}
 	</style>
 </head>
@@ -70,18 +77,214 @@
 
 		const exampleCompletion = SALAMLanguage.data.of({
 			autocomplete: completeFromList([
+				// Tags
 				{ label: "صفحه", type: "keyword" },
 				{ label: "تمام", type: "keyword" },
 				{ label: "پاراگراف", type: "keyword" },
-				// { label: "cons", type: "function" },
-				// { label: "car", type: "function" },
-				// { label: "cdr", type: "function" }
+				{ label: "ضخیم", type: "keyword" },
+				{ label: "قطعه", type: "keyword" },
+				{ label: "گروه‌بندی", type: "keyword" },
+				{ label: "عنوان گروه", type: "keyword" },
+				{ label: "تصویر", type: "keyword" },
+				{ label: "پیوند", type: "keyword" },
+				{ label: "خط", type: "keyword" },
+				{ label: "خط بعدی", type: "keyword" },
+				{ label: "دکمه", type: "keyword" },
+				{ label: "ورودی", type: "keyword" },
+				{ label: "ویرایشگر متن", type: "keyword" },
+				{ label: "برچسب", type: "keyword" },
+				{ label: "جعبه", type: "keyword" },
+				{ label: "فهرست غیر مرتب", type: "keyword" },
+				{ label: "فهرست مرتب", type: "keyword" },
+				{ label: "مورد", type: "keyword" },
+				{ label: "جدول", type: "keyword" },
+				{ label: "ردیف", type: "keyword" },
+				{ label: "ستون", type: "keyword" },
+				// Attributes
+				{ label: "عرض", type: "keyword" },
+				{ label: "ارتفاع", type: "keyword" },
+				{ label: "رنگ برجسبته", type: "keyword" },
+				{ label: "ظاهر", type: "keyword" },
+				{ label: "نسبت ابعاد", type: "keyword" },
+				{ label: "فیلتر پس‌زمینه", type: "keyword" },
+				{ label: "مشاهده‌پذیری پشت‌نما", type: "keyword" },
+				{ label: "تصویر پس‌زمینه", type: "keyword" },
+				{ label: "پیوست تصویر پس‌زمینه", type: "keyword" },
+				{ label: "حالت ترکیب پس‌زمینه", type: "keyword" },
+				{ label: "برش پس‌زمینه", type: "keyword" },
+				{ label: "رنگ پس‌زمینه", type: "keyword" },
+				{ label: "مبدا پس‌زمینه", type: "keyword" },
+				{ label: "مبنای انعطاف", type: "keyword" },
+				{ label: "موقعیت پس‌زمینه", type: "keyword" },
+				{ label: "موقعیت افقی پس‌زمینه", type: "keyword" },
+				{ label: "موقعیت عمودی پس‌زمینه", type: "keyword" },
+				{ label: "تکرار پس‌زمینه", type: "keyword" },
+				{ label: "اندازه پس‌زمینه", type: "keyword" },
+				{ label: "گردی", type: "keyword" },
+				{ label: "مرز", type: "keyword" },
+				{ label: "رنگ مرز انتهایی بلوک", type: "keyword" },
+				{ label: "سبک مرز انتهایی بلوک", type: "keyword" },
+				{ label: "عرض مرز انتهایی بلوک", type: "keyword" },
+				{ label: "رنگ مرز ابتدایی بلوک", type: "keyword" },
+				{ label: "سبک مرز ابتدایی بلوک", type: "keyword" },
+				{ label: "عرض مرز ابتدایی بلوک", type: "keyword" },
+				{ label: "رنگ مرز پایین", type: "keyword" },
+				{ label: "گردی پایین چپ", type: "keyword" },
+				{ label: "گردی پایین راست", type: "keyword" },
+				{ label: "سبک مرز پایین", type: "keyword" },
+				{ label: "عرض مرز پایین", type: "keyword" },
+				{ label: "ادغام مرز", type: "keyword" },
+				{ label: "گردی انتها", type: "keyword" },
+				{ label: "گردی شروع", type: "keyword" },
+				{ label: "برآمدگی تصویر مرز", type: "keyword" },
+				{ label: "تکرار تصویر مرز", type: "keyword" },
+				{ label: "برش تصویر مرز", type: "keyword" },
+				{ label: "منبع تصویر مرز", type: "keyword" },
+				{ label: "عرض تصویر مرز", type: "keyword" },
+				{ label: "رنگ مرز انتهایی خطی", type: "keyword" },
+				{ label: "سبک مرز انتهایی خطی", type: "keyword" },
+				{ label: "عرض مرز انتهایی خطی", type: "keyword" },
+				{ label: "رنگ مرز ابتدایی خطی", type: "keyword" },
+				{ label: "سبک مرز ابتدایی خطی", type: "keyword" },
+				{ label: "عرض مرز ابتدایی خطی", type: "keyword" },
+				{ label: "رنگ مرز چپ", type: "keyword" },
+				{ label: "سبک مرز چپ", type: "keyword" },
+				{ label: "عرض مرز چپ", type: "keyword" },
+				{ label: "رنگ مرز راست", type: "keyword" },
+				{ label: "سبک مرز راست", type: "keyword" },
+				{ label: "عرض مرز راست", type: "keyword" },
+				{ label: "فاصله مرز", type: "keyword" },
+				{ label: "گردی ابتدا و انتها", type: "keyword" },
+				{ label: "شعاع ابتدایی شروع مرز", type: "keyword" },
+				{ label: "رنگ مرز بالا", type: "keyword" },
+				{ label: "گردی بالا چپ", type: "keyword" },
+				{ label: "گردی بالا راست", type: "keyword" },
+				{ label: "سبک مرز بالا", type: "keyword" },
+				{ label: "عرض مرز بالا", type: "keyword" },
+				{ label: "پایین", type: "keyword" },
+				{ label: "اندازه‌گیری جعبه", type: "keyword" },
+				{ label: "سایه جعبه", type: "keyword" },
+				{ label: "شکست درون", type: "keyword" },
+				{ label: "شکست قبل", type: "keyword" },
+				{ label: "شکست بعد", type: "keyword" },
+				{ label: "موقعیت عنوان", type: "keyword" },
+				{ label: "رنگ نشانگر متنی", type: "keyword" },
+				{ label: "پاک‌سازی", type: "keyword" },
+				{ label: "مسیر برش", type: "keyword" },
+				{ label: "قاعده برش", type: "keyword" },
+				{ label: "رنگ", type: "keyword" },
+				{ label: "درهم‌آمیزی رنگ", type: "keyword" },
+				{ label: "درهم‌آمیزی رنگ فیلترها", type: "keyword" },
+				{ label: "طرح رنگ", type: "keyword" },
+				{ label: "تعداد ستون‌ها", type: "keyword" },
+				{ label: "پر کردن ستون‌ها", type: "keyword" },
+				{ label: "فاصله بین ستون‌ها", type: "keyword" },
+				{ label: "رنگ خط افقی ستون", type: "keyword" },
+				{ label: "سبک خط افقی ستون", type: "keyword" },
+				{ label: "عرض خط افقی ستون", type: "keyword" },
+				{ label: "گستردگی ستون‌ها", type: "keyword" },
+				{ label: "ستون‌ها", type: "keyword" },
+				{ label: "حاوی بودن", type: "keyword" },
+				{ label: "اندازه بلوک ذاتی", type: "keyword" },
+				{ label: "ارتفاع ذاتی", type: "keyword" },
+				{ label: "اندازه درون‌خطی ذاتی", type: "keyword" },
+				{ label: "اندازه ذاتی", type: "keyword" },
+				{ label: "عرض ذاتی", type: "keyword" },
+				{ label: "ظرف", type: "keyword" },
+				{ label: "نام ظرف", type: "keyword" },
+				{ label: "نوع ظرف", type: "keyword" },
+				{ label: "محتوا", type: "keyword" },
+				{ label: "مشاهده محتوا", type: "keyword" },
+				{ label: "افزایش شمارنده", type: "keyword" },
+				{ label: "بازنشانی شمارنده", type: "keyword" },
+				{ label: "تنظیم شمارنده", type: "keyword" },
+				{ label: "نشانگر", type: "keyword" },
+				{ label: "جهت", type: "keyword" },
+				{ label: "قرارگیری", type: "keyword" },
+				{ label: "سلول‌های خالی", type: "keyword" },
+				{ label: "پر کردن", type: "keyword" },
+				{ label: "شفافیت پر کردن", type: "keyword" },
+				{ label: "قاعده پر کردن", type: "keyword" },
+				{ label: "فیلتر", type: "keyword" },
+				{ label: "انعطاف", type: "keyword" },
+				{ label: "جهت انعطاف", type: "keyword" },
+				{ label: "جریان انعطاف", type: "keyword" },
+				{ label: "رشد انعطاف", type: "keyword" },
+				{ label: "کوچک‌شدن انعطاف", type: "keyword" },
+				{ label: "چینش انعطاف", type: "keyword" },
+				{ label: "شناور", type: "keyword" },
+				{ label: "نام فونت", type: "keyword" },
+				{ label: "تنظیمات ویژگی فونت", type: "keyword" },
+				{ label: "کرنینگ فونت", type: "keyword" },
+				{ label: "بازنویسی زبان فونت", type: "keyword" },
+				{ label: "اندازه‌گیری اپتیکال فونت", type: "keyword" },
+				{ label: "اندازه فونت", type: "keyword" },
+				{ label: "کشیدگی فونت", type: "keyword" },
+				{ label: "سبک فونت", type: "keyword" },
+				{ label: "نوع فونت", type: "keyword" },
+				{ label: "نمایش فونت", type: "keyword" },
+				{ label: "وزن فونت", type: "keyword" },
+				{ label: "شبکه", type: "keyword" },
+				{ label: "منطقه شبکه", type: "keyword" },
+				{ label: "ستون‌های خودکار شبکه", type: "keyword" },
+				{ label: "جریان خودکار شبکه", type: "keyword" },
+				{ label: "ردیف‌های خودکار شبکه", type: "keyword" },
+				{ label: "ستون‌های شبکه", type: "keyword" },
+				{ label: "پایان ستون شبکه", type: "keyword" },
+				{ label: "شروع ستون شبکه", type: "keyword" },
+				{ label: "ردیف‌های شبکه", type: "keyword" },
+				{ label: "پایان ردیف شبکه", type: "keyword" },
+				{ label: "شروع ردیف شبکه", type: "keyword" },
+				{ label: "الگوی شبکه", type: "keyword" },
+				{ label: "مناطق الگوی شبکه", type: "keyword" },
+				{ label: "ستون‌های الگوی شبکه", type: "keyword" },
+				{ label: "ردیف‌های الگوی شبکه", type: "keyword" },
+				{ label: "توجیه محتوا", type: "keyword" },
+				{ label: "چپ", type: "keyword" },
+				{ label: "فاصله بین حروف", type: "keyword" },
+				{ label: "ارتفاع خط", type: "keyword" },
+				{ label: "سبک فهرست", type: "keyword" },
+				{ label: "فاصله", type: "keyword" },
+				{ label: "فاصله پایین", type: "keyword" },
+				{ label: "فاصله چپ", type: "keyword" },
+				{ label: "فاصله راست", type: "keyword" },
+				{ label: "فاصله بالا", type: "keyword" },
+				{ label: "حداکثر ارتفاع", type: "keyword" },
+				{ label: "حداکثر عرض", type: "keyword" },
+				{ label: "حداقل ارتفاع", type: "keyword" },
+				{ label: "حداقل عرض", type: "keyword" },
+				{ label: "تناسب شیء", type: "keyword" },
+				{ label: "شفافیت", type: "keyword" },
+				{ label: "بیش از حد", type: "keyword" },
+				{ label: "بیش از حد (X)", type: "keyword" },
+				{ label: "بیش از حد (Y)", type: "keyword" },
+				{ label: "فاصله", type: "keyword" },
+				{ label: "فاصله پایین", type: "keyword" },
+				{ label: "فاصله چپ", type: "keyword" },
+				{ label: "فاصله راست", type: "keyword" },
+				{ label: "فاصله بالا", type: "keyword" },
+				{ label: "زینت متن", type: "keyword" },
+				{ label: "", type: "keyword" },
+				{ label: "", type: "keyword" },
+				{ label: "", type: "keyword" },
+				{ label: "", type: "keyword" },
+				{ label: "", type: "keyword" },
+				{ label: "", type: "keyword" },
+				{ label: "", type: "keyword" },
+				{ label: "", type: "keyword" },
+				{ label: "", type: "keyword" },
 			])
 		});
 
 		function SALAM() {
 			return new LanguageSupport(SALAMLanguage, [exampleCompletion])
 		}
+
+		const customTheme = EditorView.theme({
+			'&': {
+				font: "Vazirmatn, Tahoma, Arial",
+			}
+		})
 
 		const elm_editor = document.querySelector("#editor");
 		const editor_options = {
@@ -91,10 +294,10 @@
 			matchBrackets: true,
 			autoCloseBrackets: true,
 			autoCloseTags: true,
-			mode: "htmlmixed",
 			extensions: [
 				basicSetup,
 				SALAM(),
+				// customTheme,
 			],
 		};
 		const editor = new EditorView(editor_options);
