--- a/editor-rtl.html
+++ b/editor-rtl.html
@@ -264,15 +264,101 @@
 				{ label: "فاصله راست", type: "keyword" },
 				{ label: "فاصله بالا", type: "keyword" },
 				{ label: "زینت متن", type: "keyword" },
-				{ label: "", type: "keyword" },
-				{ label: "", type: "keyword" },
-				{ label: "", type: "keyword" },
-				{ label: "", type: "keyword" },
-				{ label: "", type: "keyword" },
-				{ label: "", type: "keyword" },
-				{ label: "", type: "keyword" },
-				{ label: "", type: "keyword" },
-				{ label: "", type: "keyword" },
+				{ label: "تبدیل متن", type: "keyword" },
+				{ label: "قابلیت مشاهده", type: "keyword" },
+				{ label: "الویت موقعیت", type: "keyword" },
+				{ label: "رنگ مرز", type: "keyword" },
+				{ label: "فاصله حاشیه", type: "keyword" },
+				{ label: "سبک حاشیه", type: "keyword" },
+				{ label: "عرض حاشیه", type: "keyword" },
+				{ label: "لنگر بیش از حد", type: "keyword" },
+				{ label: "بیش از حد بلوک", type: "keyword" },
+				{ label: "فاصله برش بیش از حد", type: "keyword" },
+				{ label: "بیش از حد درون خطی", type: "keyword" },
+				{ label: "پیچش بیش از حد", type: "keyword" },
+				{ label: "فاصله بلوک", type: "keyword" },
+				{ label: "فاصله انتهای بلوک", type: "keyword" },
+				{ label: "فاصله شروع بلوک", type: "keyword" },
+				{ label: "فاصله درون خطی", type: "keyword" },
+				{ label: "فاصله انتهای درون خطی", type: "keyword" },
+				{ label: "فاصله شروع درون خطی", type: "keyword" },
+				{ label: "صفحه", type: "keyword" },
+				{ label: "شکست صفحه بعد از", type: "keyword" },
+				{ label: "شکست صفحه قبل از", type: "keyword" },
+				{ label: "شکست صفحه درون", type: "keyword" },
+				{ label: "ترتیب نقاشی", type: "keyword" },
+				{ label: "پرسپکتیو", type: "keyword" },
+				{ label: "مبدأ پرسپکتیو", type: "keyword" },
+				{ label: "محتوای مکان", type: "keyword" },
+				{ label: "موارد مکان", type: "keyword" },
+				{ label: "خود مکان", type: "keyword" },
+				{ label: "رویدادهای اشاره‌گر", type: "keyword" },
+				{ label: "موقعیت", type: "keyword" },
+				{ label: "تنظیم رنگ چاپ", type: "keyword" },
+				{ label: "نقل‌قول", type: "keyword" },
+				{ label: "شعاع", type: "keyword" },
+				{ label: "تغییر اندازه", type: "keyword" },
+				{ label: "راست", type: "keyword" },
+				{ label: "چرخش", type: "keyword" },
+				{ label: "فاصله ردیف", type: "keyword" },
+				{ label: "هم‌راستایی روبی", type: "keyword" },
+				{ label: "موقعیت روبی", type: "keyword" },
+				{ label: "شعاع X", type: "keyword" },
+				{ label: "شعاع Y", type: "keyword" },
+				{ label: "مقیاس", type: "keyword" },
+				{ label: "رفتار پیمایش", type: "keyword" },
+				{ label: "فاصله پیمایش", type: "keyword" },
+				{ label: "فاصله بلوک پیمایش", type: "keyword" },
+				{ label: "فاصله انتهای بلوک پیمایش", type: "keyword" },
+				{ label: "فاصله شروع بلوک پیمایش", type: "keyword" },
+				{ label: "فاصله پایین پیمایش", type: "keyword" },
+				{ label: "فاصله درون خطی پیمایش", type: "keyword" },
+				{ label: "فاصله انتهای درون خطی پیمایش", type: "keyword" },
+				{ label: "فاصله شروع درون خطی پیمایش", type: "keyword" },
+				{ label: "فاصله چپ پیمایش", type: "keyword" },
+				{ label: "فاصله راست پیمایش", type: "keyword" },
+				{ label: "فاصله بالا پیمایش", type: "keyword" },
+				{ label: "فاصله پیمایش", type: "keyword" },
+				{ label: "فاصله بلوک پیمایش", type: "keyword" },
+				{ label: "فاصله انتهای بلوک پیمایش", type: "keyword" },
+				{ label: "فاصله شروع بلوک پیمایش", type: "keyword" },
+				{ label: "فاصله پایین پیمایش", type: "keyword" },
+				{ label: "فاصله درون خطی پیمایش", type: "keyword" },
+				{ label: "فاصله انتهای درون خطی پیمایش", type: "keyword" },
+				{ label: "فاصله شروع درون خطی پیمایش", type: "keyword" },
+				{ label: "فاصله چپ پیمایش", type: "keyword" },
+				{ label: "فاصله راست پیمایش", type: "keyword" },
+				{ label: "فاصله بالا پیمایش", type: "keyword" },
+				{ label: "تراز پیمایش", type: "keyword" },
+				{ label: "نوع پیمایش", type: "keyword" },
+				{ label: "شکل خارج", type: "keyword" },
+				{ label: "تراز متن", type: "keyword" },
+				{ label: "تراز آخرین متن", type: "keyword" },
+				{ label: "تراز‌کردن‌ اقلام", type: "keyword" },
+				{ label: "تورفتگی متن", type: "keyword" },
+				{ label: "بالا", type: "keyword" },
+				{ label: "تبدیل", type: "keyword" },
+				{ label: "مرکز تبدیل", type: "keyword" },
+				{ label: "ترجمه", type: "keyword" },
+				{ label: "معکوس یونیکد", type: "keyword" },
+				{ label: "انتخاب کاربر", type: "keyword" },
+				{ label: "تغییر خواهد کرد", type: "keyword" },
+				{ label: "باکس تبدیل", type: "keyword" },
+				{ label: "سبک تبدیل", type: "keyword" },
+				{ label: "انتقال", type: "keyword" },
+				{ label: "رفتار انتقال", type: "keyword" },
+				{ label: "تاخیر انتقال", type: "keyword" },
+				{ label: "مدت انتقال", type: "keyword" },
+				{ label: "ویژگی انتقال", type: "keyword" },
+				{ label: "تابع زمان‌بندی انتقال", type: "keyword" },
+				{ label: "اثر وکتور", type: "keyword" },
+				{ label: "تراز عمودی", type: "keyword" },
+				{ label: "فضای سفید", type: "keyword" },
+				{ label: "بیوه‌ها", type: "keyword" },
+				{ label: "شکستن کلمه", type: "keyword" },
+				{ label: "فاصله کلمه", type: "keyword" },
+				{ label: "حالت نوشتن", type: "keyword" },
+				{ label: "بزرگنمایی", type: "keyword" }
 			])
 		});
 
