add name to code texteditor

--- a/salam-online.html
+++ b/salam-online.html
@@ -131,7 +131,7 @@
 	</header>
 
 	<!-- Output -->
-	<textarea class="code"></textarea>
+	<textarea name="code" class="code"></textarea>
 	<iframe class="iframe"></iframe>
 	<pre class="output"></pre>
 	<pre class="error"></pre>
