--- a/editor-rtl.html
+++ b/editor-rtl.html
@@ -212,17 +212,17 @@
 				{ label: "کوچک‌شدن انعطاف", type: "keyword" },
 				{ label: "چینش انعطاف", type: "keyword" },
 				{ label: "شناور", type: "keyword" },
-				{ label: "نام فونت", type: "keyword" },
-				{ label: "تنظیمات ویژگی فونت", type: "keyword" },
-				{ label: "کرنینگ فونت", type: "keyword" },
-				{ label: "بازنویسی زبان فونت", type: "keyword" },
-				{ label: "اندازه‌گیری اپتیکال فونت", type: "keyword" },
-				{ label: "اندازه فونت", type: "keyword" },
-				{ label: "کشیدگی فونت", type: "keyword" },
-				{ label: "سبک فونت", type: "keyword" },
-				{ label: "نوع فونت", type: "keyword" },
-				{ label: "نمایش فونت", type: "keyword" },
-				{ label: "وزن فونت", type: "keyword" },
+				{ label: "نام قلم", type: "keyword" },
+				{ label: "تنظیمات ویژگی قلم", type: "keyword" },
+				{ label: "کرنینگ قلم", type: "keyword" },
+				{ label: "بازنویسی زبان قلم", type: "keyword" },
+				{ label: "اندازه‌گیری اپتیکال قلم", type: "keyword" },
+				{ label: "اندازه قلم", type: "keyword" },
+				{ label: "کشیدگی قلم", type: "keyword" },
+				{ label: "سبک قلم", type: "keyword" },
+				{ label: "نوع قلم", type: "keyword" },
+				{ label: "نمایش قلم", type: "keyword" },
+				{ label: "وزن قلم", type: "keyword" },
 				{ label: "شبکه", type: "keyword" },
 				{ label: "منطقه شبکه", type: "keyword" },
 				{ label: "ستون‌های خودکار شبکه", type: "keyword" },
