feat(styles): add and remove some components and change some styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>سلام - ادیتور</title>
     <link rel="stylesheet" href="./src/styles/style.css">
   </head>
-  <body>
+  <body class="bg-[#ff5b00]/5">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
