feat(style): change all alert in console style

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             console.log(
                     "%c1.salam loaded in index success",
                     `
-                      padding: 10px;
-                      border-radius: 10px;
+                      padding: 3px 10px;
+                      border-radius: 5px;
                       color: white;
                       background-color: #00BC1C;
                       font-family: estedad, sansserif;
-                      font-size: 18px;
+                      font-size: 15px;
                     `
             )
           };
