feat(runner): add runner dark mode

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>سلام - ادیتور</title>
     <link rel="stylesheet" href="./src/styles/style.css">
   </head>
-  <body class="bg-[#ff5b00]/5">
+  <body class="bg-[#ff5b00]/5 dark:bg-[#22272E]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script>
