--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>سلام - ادیتور</title>
     <link rel="stylesheet" href="./src/styles/style.css">
+    <script>
+      const theme = localStorage?.getItem("theme")
+      const doc = document.documentElement
+
+      if (theme) {
+        if (theme === "dark") {
+          doc.classList.add("dark")
+        }else if (theme === "light") {
+          doc.classList.remove("dark")
+        }
+      }
+    </script>
   </head>
   <body class="bg-[#ff5b00]/5 dark:bg-[#22272E]">
     <div id="root"></div>
