feat(new): add new salam file

--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <title>سلام</title>
 </head>
 <body>
-<script src="/src/scripts/salam.min.js"></script>
+<script src="/src/scripts/salam-wa.js"></script>
 <script>
     const code = `
 layout:
